# cylinder_seal

./: .env.example  .gitignore  ANDROID_WEEK2_BRIDGE.md  API_REFERENCE.md  ARCHITECTURE_TRANSITION.md  CBI_PITCH_COMPARATIVE_ANALYSIS.md  CBI_PITCH_ENHANCED_SPEAKER_NOTES.md  COMPLETION_CHECKLIST.md  CONSENSUS_ANALYSIS.md  CONSENSUS_DESIGN_FINAL.md  Cargo.toml  CylinderSeal 1.pptx  DEVELOPMENT_GUIDE.md  DIGITAL_IRAQI_DINAR.md  DOCUMENTATION_INDEX.md  EXECUTIVE_SUMMARY.md  FINAL_SUMMARY.md  GOVERNANCE_FRAMEWORK.md  GOVERNANCE_FRAMEWORK_CBI.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  IRAQI_MADE_PREFERENCE_SUMMARY.md  IRAQ_DEPLOYMENT.md  IRAQ_FINANCIAL_PROJECTIONS_5YEAR.md  LOCATION_CAPTURE_GUIDE.md  LOCATION_IMPLEMENTATION_SUMMARY.md  MONETARY_POLICY_SPECIFICATION.md  MONETARY_POLICY_SPECIFICATION_CBI.md  NETWORK_AND_CREDIT_ARCHITECTURE.md  OPEN_SOURCE_INFRASTRUCTURE_VISION.md  PITCH_CORRECTIONS_2026_REALITY.md  PROJECT_COMPLETE_SUMMARY.md  QUORUM_STATE_VOTING_DESIGN.md  README.md  README_UPDATES_SUMMARY.md  RECOVERY_AND_KEY_ROTATION.md  SECURITY_IMPROVEMENTS.md  SECURITY_INDEX.md  SPEC_INTEGRATION_SUMMARY.md  SUPER_PEER_ACCOUNTABILITY.md  (+14 more)
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/gradle/: libs.versions.toml
crates/cbi-dashboard/: Cargo.toml  README.md
crates/cbi-dashboard/src/: auth.rs  config.rs  main.rs  middleware.rs  state.rs
crates/cbi-dashboard/src/routes/: accounts.rs  accounts_stub.rs  analytics.rs  analytics_stub.rs  audit.rs  audit_stub.rs  compliance.rs  compliance_stub.rs  industrial.rs  mod.rs  monetary.rs  monetary_stub.rs  overview.rs  pages.rs  producer.rs  risk.rs  risk_stub.rs
crates/cbi-dashboard/templates/: accounts.html  analytics.html  base.html  compliance.html  login.html  overview.html  projects.html
crates/cbi-dashboard/tests/: integration_dashboard.rs  integration_tests.rs
crates/cs-analytics/: Cargo.toml
crates/cs-analytics/src/: error.rs  import_substitution.rs  lib.rs  models.rs  project_gdp.rs  repositories.rs  sector_analytics.rs
crates/cs-api/: Cargo.toml
crates/cs-api/src/: admin.rs  admin_ui.rs  beneficial_owners.rs  business.rs  compliance.rs  emergency_directive.rs  handlers.rs  invoices.rs  iraq_admin.rs  lib.rs  middleware.rs  otp.rs  producer.rs  routes.rs  rule_governance.rs  travel_rule.rs  wallets.rs  webhooks.rs
crates/cs-bridge/: Cargo.toml
crates/cs-bridge/src/: frb_generated.rs  lib.rs
crates/cs-bridge/src/api/: crypto.rs  mod.rs  transactions.rs  wire.rs
crates/cs-consensus/: Cargo.toml
crates/cs-consensus/src/: lib.rs  log.rs  node.rs  rpc.rs  state_machine.rs  transport.rs
crates/cs-core/: Cargo.toml
crates/cs-core/src/: crypto.rs  cryptography.rs  error.rs  hardware_binding.rs  iraqi_id.rs  lib.rs  location.rs  models.rs  nonce.rs  primitives.rs  producer.rs
crates/cs-credit/: Cargo.toml
crates/cs-credit/src/: cashflow.rs  lib.rs  scheduler.rs  scorer.rs
crates/cs-exchange/: Cargo.toml
crates/cs-exchange/src/: cbi.rs  feed_aggregator.rs  lib.rs  spread.rs
crates/cs-feeds/: Cargo.toml
crates/cs-feeds/src/: cbi.rs  eu.rs  lib.rs  ofac.rs  scheduler.rs  uk.rs  un.rs  worker.rs
crates/cs-mobile-core/: Cargo.toml  build.rs
crates/cs-mobile-core/src/: cs_mobile_core.udl  lib.rs  wire.rs
crates/cs-node/: Cargo.toml
crates/cs-node/src/: admin_bootstrap.rs  config.rs  main.rs  startup.rs
crates/cs-policy/: Cargo.toml
crates/cs-policy/src/: aml.rs  hard_restrictions.rs  individual_producer.rs  lib.rs  merchant_tier.rs  pg.rs  primitives.rs  reporting.rs  risk_scoring.rs  rule_engine.rs
crates/cs-pos/: Cargo.toml  README.md
crates/cs-pos/packaging/: cylinder-seal-pos.env.example  cylinder-seal-pos.service
crates/cs-pos/src/: ble.rs  config.rs  lib.rs  main.rs  merchant.rs  nfc.rs  payment.rs  printer.rs  qr.rs  registration.rs  store.rs  sync.rs
crates/cs-pos/ui/: main.slint
crates/cs-storage/: Cargo.toml
crates/cs-storage/src/: compliance.rs  iraq_phase2.rs  lib.rs  models.rs  postgres.rs  postgres_impl.rs  primitives_repo.rs  producer_repo.rs  redis.rs  redis_impl.rs  repository.rs
crates/cs-sync/: Cargo.toml  build.rs
crates/cs-sync/src/: business_service.rs  conflict_resolver.rs  convert.rs  gossip_client.rs  lib.rs  proto.rs  raft_transport.rs  state_machine.rs  sync_service.rs
crates/cs-tests/: Cargo.toml  README.md
crates/cs-tests/src/: fixtures.rs  lib.rs
crates/cs-tests/tests/: e2e_invoice_flow.rs  e2e_offline_payment.rs  spec_01_crypto_primitives.rs  spec_02_canonical_signing.rs  spec_03_nonce_chain.rs  spec_04_journal_chain.rs  spec_05_raft_consensus.rs  spec_06_merchant_tiers.rs  spec_07_aml_flagging.rs  spec_08_credit_scoring.rs  spec_09_account_types.rs  spec_10_api_key_auth.rs  spec_11_invoice_lifecycle.rs  spec_12_wire_formats.rs  spec_13_conflict_resolution.rs  spec_14_rule_engine.rs  spec_15_risk_scoring.rs  spec_16_regulatory_reporting.rs  spec_17_cbi_integration.rs  spec_18_compliance_workflow.rs  spec_19_ubi_distribution.rs  spec_20_production_feedback.rs  spec_21_ubi_feedback_algorithm.rs  spec_22_programmability_primitives.rs  spec_23_tier_policy_enforcement.rs
docs/: ANDROID_WEEK2_BRIDGE.md  DEVELOPER_QUICK_REFERENCE.md  IMPLEMENTATION_ROADMAP.md  IRAQ_IMPLEMENTATION_ROADMAP.md  IRON_SECURITY.md  LOCATION_CAPTURE_GUIDE.md  MARKETPLACE_IMPLEMENTATION.md  NETWORK_AND_CREDIT_ARCHITECTURE.md  SECURITY_SUMMARY.md  SECURITY_VALIDATION.md  TESTING_STRATEGY.md  WEEK1_STATUS.md
flutter_app/: README.md  flutter_rust_bridge.yaml  pubspec.yaml
flutter_app/lib/: main.dart
ios/: README.md  project.yml
migrations/: 20240101000001_init.sql  20260101000001_policy.sql  20260417000001_cbi_indicators.sql  20260417000002_aml_risk.sql  20260417000003_compliance_phase1.sql  20260417000004_sanctions_entries.sql  20260418000001_iraq_phase2.sql  20260419000001_analytics.sql  20260420000001_producer_ip_doc.sql  20260421000001_wire_format_primitives.sql  20260701000001_business_accounts.sql
proto/: chain_sync.proto
sqlite-migrations/: 001_init.sql  002_seed_data.sql
(+157 files in other folders)
