[workspace]
members = [
    "crates/cs-core",
    "crates/cs-storage",
    "crates/cs-sync",
    "crates/cs-api",
    "crates/cs-credit",
    "crates/cs-exchange",
    "crates/cs-policy",
    "crates/cs-consensus",
    "crates/cs-node",
    "crates/cs-mobile-core",
    "crates/cs-pos",
    "crates/cs-tests",
    "crates/cs-bridge",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["CylinderSeal Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP/gRPC
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression-full", "timeout", "trace"] }
tonic = { version = "0.12.3", features = ["tls", "tls-roots"] }
tonic-build = "0.12.3"
prost = "0.13"
prost-types = "0.13"
futures = "0.3"
futures-core = "0.3"
tokio-stream = "0.1"
async-trait = "0.1"

# Database
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros", "migrate", "rust_decimal"] }
deadpool-redis = "0.15"
redis = { version = "0.25", features = ["aio", "tokio-comp", "connection-manager"] }

# Cryptography
blake2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
serde-big-array = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"

# Utilities
uuid = { version = "1.10", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "1.0"
config = "0.14"
clap = { version = "4.5", features = ["derive"] }
rust_decimal = { version = "1.35", features = ["serde"] }
argon2 = "0.5"
jsonwebtoken = "9.3"

# Development
tokio-test = "0.4"
mockall = "0.12"
