[package]
name = "cbi-dashboard"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cbi-dashboard"
path = "src/main.rs"

[dependencies]
# Async runtime + HTTP
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }

# Database - PostgreSQL
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Password hashing + crypto
argon2 = "0.5"
rand = { workspace = true }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Redis for sessions
deadpool-redis = { workspace = true }
redis = { workspace = true, features = ["aio"] }

# Hex encoding
hex = { workspace = true }

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Internal crates
cs-storage = { path = "../cs-storage" }
cs-policy = { path = "../cs-policy" }
cs-exchange = { path = "../cs-exchange" }
cs-core = { path = "../cs-core" }
