[package]
name = "cs-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cs-core = { path = "../cs-core" }
cs-exchange = { path = "../cs-exchange" }
cs-policy = { path = "../cs-policy" }
cs-storage = { path = "../cs-storage" }
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
jsonwebtoken.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
hex.workspace = true
rand.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
