[package]
name = "cs-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_cbor.workspace = true
uuid.workspace = true
chrono.workspace = true
blake2.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
sha2.workspace = true
hmac.workspace = true
hex.workspace = true
serde-big-array.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rust_decimal.workspace = true
tracing.workspace = true
prost.workspace = true

[dev-dependencies]
tokio-test.workspace = true
