[package]
name = "cs-credit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cs-core = { path = "../cs-core" }
cs-storage = { path = "../cs-storage" }
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
rust_decimal.workspace = true
uuid.workspace = true
