[package]
name = "cs-feeds"
version.workspace = true
edition.workspace = true

[dependencies]
cs-core = { path = "../cs-core" }
cs-storage = { path = "../cs-storage" }

tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
reqwest.workspace = true
quick-xml.workspace = true
csv.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
