[package]
name = "cs-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "cylinder-seal-node"
path = "src/main.rs"

[dependencies]
cs-core = { path = "../cs-core" }
cs-storage = { path = "../cs-storage" }
cs-sync = { path = "../cs-sync" }
cs-api = { path = "../cs-api" }
cs-credit = { path = "../cs-credit" }
cs-exchange = { path = "../cs-exchange" }
cs-consensus = { path = "../cs-consensus" }
cs-policy = { path = "../cs-policy" }

tokio.workspace = true
axum.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
