[package]
name = "cs-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cs-core = { path = "../cs-core" }
cs-storage = { path = "../cs-storage" }
cs-consensus = { path = "../cs-consensus" }
cs-policy = { path = "../cs-policy" }
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
futures.workspace = true
futures-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_cbor.workspace = true
rust_decimal.workspace = true
hex.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
tokio-test.workspace = true
